--- a/index.html
+++ b/index.html
@@ -361,6 +361,21 @@
           top: 110%;
         }
       }
+
+      .plot-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 6px;
+      }
+
+      .plot-container input {
+        width: 70px;
+        padding: 4px;
+      }
+      .plot-container button {
+        padding: 6px 12px;
+      }
     </style>
   </head>
 
@@ -370,6 +385,43 @@
       <div class="controls">
         <button id="startStopBtn">START</button>
         <button id="processBtn" style="display: none">CAPTURE</button>
+        <div
+          class="plot-container"
+          style="margin-top: 24px; text-align: center"
+        >
+          <input
+            id="plotFiles"
+            type="file"
+            accept=".txt"
+            multiple
+            style="margin-bottom: 8px"
+          />
+          <input
+            id="xminInput"
+            type="number"
+            placeholder="xmin"
+            value="400"
+            style="width: 80px; margin-right: 4px"
+          />
+          <input
+            id="xmaxInput"
+            type="number"
+            placeholder="xmax"
+            value="625"
+            style="width: 80px; margin-right: 4px"
+          />
+          <button id="plotBtn" style="font-size: 16px; padding: 6px 12px">
+            Plot Spectra
+          </button>
+
+          <div style="margin-top: 16px">
+            <img
+              id="plotImg"
+              alt="Spectra Plot"
+              style="max-width: 640px; display: none; border: 1px solid #444"
+            />
+          </div>
+        </div>
       </div>
 
       <!-- live video + coords -->
@@ -440,42 +492,7 @@
       <div class="clear-container">
         <button id="forceClearBtn">CLEAR</button>
       </div>
-      <div class="plot-container" style="margin-top: 24px; text-align: center">
-        <input
-          id="plotFiles"
-          type="file"
-          accept=".txt"
-          multiple
-          style="margin-bottom: 8px"
-        />
-        <input
-          id="xminInput"
-          type="number"
-          placeholder="xmin"
-          value="400"
-          style="width: 80px; margin-right: 4px"
-        />
-        <input
-          id="xmaxInput"
-          type="number"
-          placeholder="xmax"
-          value="625"
-          style="width: 80px; margin-right: 4px"
-        />
-        <button id="plotBtn" style="font-size: 16px; padding: 6px 12px">
-          Plot Spectra
-        </button>
-  
-        <div style="margin-top: 16px">
-          <img
-            id="plotImg"
-            alt="Spectra Plot"
-            style="max-width: 640px; display: none; border: 1px solid #444"
-          />
-        </div>
-      </div>
     </div>
-    
 
     <div class="lines">
       <div class="line"></div>
