--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 
       .controls {
         display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
         gap: 16px;
       }
 
@@ -385,41 +387,26 @@
       <div class="controls">
         <button id="startStopBtn">START</button>
         <button id="processBtn" style="display: none">CAPTURE</button>
-        <div
-          class="plot-container"
-          style="margin-top: 24px; text-align: center"
-        >
-          <input
-            id="plotFiles"
-            type="file"
-            accept=".txt"
-            multiple
-            style="margin-bottom: 8px"
-          />
-          <input
-            id="xminInput"
-            type="number"
-            placeholder="xmin"
-            value="400"
-            style="width: 80px; margin-right: 4px"
-          />
-          <input
-            id="xmaxInput"
-            type="number"
-            placeholder="xmax"
-            value="625"
-            style="width: 80px; margin-right: 4px"
-          />
-          <button id="plotBtn" style="font-size: 16px; padding: 6px 12px">
-            Plot Spectra
-          </button>
+        <div class="controls">
+          <button id="startStopBtn">START</button>
+          <button id="processBtn" style="display: none">CAPTURE</button>
 
-          <div style="margin-top: 16px">
-            <img
-              id="plotImg"
-              alt="Spectra Plot"
-              style="max-width: 640px; display: none; border: 1px solid #444"
+          <!-- Plot UI now lives here, flush with START -->
+          <div class="plot-container">
+            <input id="plotFiles" type="file" accept=".txt" multiple />
+            <input
+              id="xminInput"
+              type="number"
+              placeholder="xmin"
+              value="400"
             />
+            <input
+              id="xmaxInput"
+              type="number"
+              placeholder="xmax"
+              value="625"
+            />
+            <button id="plotBtn">Plot Spectra</button>
           </div>
         </div>
       </div>
