--- a/index.html
+++ b/index.html
@@ -388,8 +388,7 @@
         <button id="startStopBtn">START</button>
         <button id="processBtn" style="display: none">CAPTURE</button>
 
-        <!-- Plot UI now lives here, flush with START -->
-        <div class="plot-container">
+        <!-- <div class="plot-container">
           <input id="plotFiles" type="file" accept=".txt" multiple />
           <input id="xminInput" type="number" placeholder="xmin" value="400" />
           <input id="xmaxInput" type="number" placeholder="xmax" value="625" />
@@ -398,7 +397,10 @@
         <img
           id="plotImg"
           style="display: none; margin-top: 20px; max-width: 100%"
-        />
+        /> -->
+        <button onclick="location.href='plot.html'" id="redirectPlotBtn">
+          Plot
+        </button>        
       </div>
 
       <!-- live video + coords -->
