--- a/index.html
+++ b/index.html
@@ -388,19 +388,11 @@
         <button id="startStopBtn">START</button>
         <button id="processBtn" style="display: none">CAPTURE</button>
 
-        <!-- <div class="plot-container">
-          <input id="plotFiles" type="file" accept=".txt" multiple />
-          <input id="xminInput" type="number" placeholder="xmin" value="400" />
-          <input id="xmaxInput" type="number" placeholder="xmax" value="625" />
-          <button id="plotBtn">Plot Spectra</button>
+        <div class="plot-container">
+          <button onclick="location.href='plot.html'" id="redirectPlotBtn">
+            Plot
+          </button>
         </div>
-        <img
-          id="plotImg"
-          style="display: none; margin-top: 20px; max-width: 100%"
-        /> -->
-        <button onclick="location.href='plot.html'" id="redirectPlotBtn">
-          Plot
-        </button>        
       </div>
 
       <!-- live video + coords -->
