--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Spectrum</title>
+    <title>Spectrometer</title>
     <style>
       /* import font */
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
@@ -378,11 +378,11 @@
   <body>
     <div class="container">
       <div class="controls">
-        <button id="startStopBtn">START CAMERA</button>
+        <button id="startStopBtn">START</button>
         <button id="processBtn" style="display: none">CAPTURE</button>
 
         <button id="redirectPlotBtn" onclick="location.href='plot.html'">
-          Plot Spectra
+          PLOT
         </button>
       </div>
 
