--- a/plot.html
+++ b/plot.html
@@ -37,13 +37,13 @@
         font-size: 18px;
       }
 
-      .inputs{
+      .inputs {
         display: flex;
         flex-direction: row;
         gap: 24px;
       }
 
-      input[type="number"]{
+      input[type="number"] {
         width: 75px;
       }
 
@@ -74,14 +74,21 @@
   <body>
     <div class="plot-container">
       <input id="plotFiles" type="file" accept=".txt" multiple />
+      <div id="fileLabelInputs"></div>
       <div class="inputs">
-      <div>
-        <label>X MIN: <input id="xminInput" type="number" placeholder="xmin" value="400" /></label>
+        <div>
+          <label
+            >X MIN:
+            <input id="xminInput" type="number" placeholder="xmin" value="400"
+          /></label>
+        </div>
+        <div>
+          <label
+            >X MAX:
+            <input id="xmaxInput" type="number" placeholder="xmax" value="625"
+          /></label>
+        </div>
       </div>
-      <div>
-        <label>X MIN: <input id="xmaxInput" type="number" placeholder="xmax" value="625" /></label>
-      </div> 
-    </div>     
       <button id="plotBtn">PLOT</button>
       <img id="plotImg" style="display: none" />
     </div>
@@ -114,6 +121,49 @@
           if (!res.ok) {
             return alert("Plot error: " + (j.message || res.status));
           }
+          plotImg.src = "data:image/png;base64," + j.plot;
+          plotImg.style.display = "block";
+        } catch (e) {
+          alert("Cannot reach plotting endpoint.");
+        }
+      });
+
+      plotFiles.addEventListener("change", () => {
+        const container = document.getElementById("fileLabelInputs");
+        container.innerHTML = "";
+        Array.from(plotFiles.files).forEach((file, i) => {
+          const label = document.createElement("div");
+          label.style.marginTop = "10px";
+          label.innerHTML = `
+        <strong>${file.name}</strong>
+        <input type="text" name="label" placeholder="Enter label for ${file.name}" style="margin-left:10px; padding: 6px;" />
+      `;
+          container.appendChild(label);
+        });
+      });
+
+      plotBtn.addEventListener("click", async () => {
+        if (!plotFiles.files.length)
+          return alert("Please select at least one .txt file.");
+
+        const xmin = document.getElementById("xminInput").value;
+        const xmax = document.getElementById("xmaxInput").value;
+
+        const form = new FormData();
+        for (const f of plotFiles.files) form.append("files", f);
+        document
+          .getElementsByName("label")
+          .forEach((inp) => form.append("labels", inp.value || "Unnamed"));
+        form.append("xmin", xmin);
+        form.append("xmax", xmax);
+
+        try {
+          const res = await fetch(piURL + "/plot", {
+            method: "POST",
+            body: form,
+          });
+          const j = await res.json();
+          if (!res.ok) return alert("Plot error: " + (j.message || res.status));
           plotImg.src = "data:image/png;base64," + j.plot;
           plotImg.style.display = "block";
         } catch (e) {
