--- a/plot.html
+++ b/plot.html
@@ -6,131 +6,182 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 
-      /* full-page flex centering */
+      /* basic page flow + vertical scroll */
       body {
         margin: 0;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        padding: 20px;
         background-color: #212121;
         font-family: "Inter", sans-serif;
         color: #ededed;
+        overflow-y: auto;
       }
 
+      /* center container, allow it to grow */
       .plot-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 16px;
-        padding: 40px;
-        border-radius: 10px;
+        max-width: 900px;
+        margin: 0 auto;
       }
 
-      input[type="number"],
-      input[type="file"] {
+      /* unified input look */
+      .plot-input {
         background: #171717;
-        border: 1px solid black;
+        border: 1px solid #000;
         border-radius: 4px;
         color: #ededed;
-        padding: 10px;
-        font-size: 18px;
+        padding: 8px;
+        font-size: 16px;
       }
 
+      /* file & label rows */
+      #fileLabelInputs > div {
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+      #fileLabelInputs strong {
+        width: 200px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        font-weight: 500;
+      }
+
+      /* inputs row */
       .inputs {
         display: flex;
-        flex-direction: row;
         gap: 24px;
+        margin-top: 16px;
       }
 
-      input[type="number"] {
-        width: 75px;
-      }
-
+      /* buttons */
       button {
         font-size: 18px;
         padding: 10px 20px;
         border-radius: 5px;
-        border: 2px solid #000;
+        border: none;
         background: #16f381;
         color: #0d0d0d;
         cursor: pointer;
+        margin-top: 16px;
       }
-
       button:hover {
         box-shadow: 0 0 10px #16f381, 0 0 20px #16f38133;
         transform: translateY(-1px);
       }
 
-      #plotImg {
+      /* images */
+      img {
+        display: block;
+        margin: 20px auto 0;
         max-width: 100%;
-        margin-top: 20px;
         border: 1px solid #444;
-        box-shadow: 0 0 10px #16f38133;
+      }
+
+      /* compute section */
+      #computeSection {
+        display: none;
+        margin-top: 30px;
+        text-align: center;
+      }
+      #computeSection h3 {
+        margin-bottom: 12px;
+      }
+      #computeSection > div {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+        flex-wrap: wrap;
+      }
+      #computeSection label {
+        font-weight: bold;
+        display: block;
+        margin-bottom: 6px;
+      }
+      .iRow {
+        margin-top: 6px;
+        display: flex;
+        gap: 6px;
+        justify-content: center;
+      }
+      #resultPlots img {
+        margin-top: 20px;
       }
     </style>
   </head>
 
   <body>
     <div class="plot-container">
-      <input id="plotFiles" type="file" accept=".txt" multiple />
+      <!-- SPECTRA INPUTS -->
+      <input
+        id="plotFiles"
+        class="plot-input"
+        type="file"
+        accept=".txt"
+        multiple
+      />
       <div id="fileLabelInputs"></div>
       <div class="inputs">
-        <label>
-          X MIN:
-          <input id="xminInput" type="number" value="400" />
-        </label>
-        <label style="margin-left: 24px">
-          X MAX:
-          <input id="xmaxInput" type="number" value="625" />
-        </label>
+        <div>
+          <label>X MIN:</label>
+          <input id="xminInput" class="plot-input" type="number" value="400" />
+        </div>
+        <div>
+          <label>X MAX:</label>
+          <input id="xmaxInput" class="plot-input" type="number" value="625" />
+        </div>
       </div>
       <button id="plotBtn">PLOT</button>
-      <img
-        id="plotImg"
+
+      <!-- SPECTRA OUTPUT -->
+      <img id="plotImg" style="display: none" />
+
+      <!-- INTENSITIES & LABELS -->
+      <p
+        id="intensitiesText"
         style="
           display: none;
-          margin: 20px auto 0;
-          max-width: 100%;
-          border: 1px solid #444;
+          color: #16f381;
+          font-weight: bold;
+          text-align: center;
         "
-      />
-      <div
-        id="computeSection"
-        style="display: none; margin-top: 20px; text-align: center"
-      >
-        <h3 style="color: #ededed">Compute Transmission & Absorbance</h3>
-        <div
-          style="
-            display: flex;
-            justify-content: center;
-            gap: 40px;
-            margin-bottom: 10px;
-            color: #ededed;
-          "
-        >
-          <!-- I inputs -->
-          <div id="iSection">
-            <label style="font-weight: bold">I:</label>
+      ></p>
+      <p
+        id="labelsText"
+        style="
+          display: none;
+          color: #16f381;
+          font-weight: bold;
+          text-align: center;
+        "
+      ></p>
+
+      <!-- COMPUTE SECTION -->
+      <div id="computeSection">
+        <h3>Compute Transmission & Absorbance</h3>
+        <div>
+          <!-- I column -->
+          <div>
+            <label>I:</label>
             <div id="iInputs"></div>
-            <button id="addI" style="margin-top: 8px; padding: 4px 8px">
+            <button id="addI" style="margin-top: 6px; padding: 4px 8px">
               + Add I
             </button>
           </div>
-          <!-- I0 blank -->
-          <div id="i0Section">
-            <label style="font-weight: bold">I₀ (Blank):</label><br />
+          <!-- I₀ blank -->
+          <div>
+            <label>I₀ (Blank):</label>
             <input
               id="i0Input"
+              class="plot-input"
               type="number"
               step="any"
               placeholder="Enter I₀"
-              style="width: 100px; padding: 6px; margin-top: 4px"
             />
           </div>
         </div>
-        <button id="computeBtn" style="padding: 8px 16px">GO</button>
-        <div id="resultPlots" style="margin-top: 20px"></div>
+        <button id="computeBtn">GO</button>
+        <div id="resultPlots"></div>
       </div>
     </div>
 
@@ -141,48 +192,47 @@
       const plotImg = document.getElementById("plotImg");
       const labelDiv = document.getElementById("fileLabelInputs");
       const inputsDiv = document.querySelector(".inputs");
-      let plotted = false;
+      const iInputs = document.getElementById("iInputs");
+      const addI = document.getElementById("addI");
+      const computeSection = document.getElementById("computeSection");
+      const computeBtn = document.getElementById("computeBtn");
+      const intensitiesText = document.getElementById("intensitiesText");
+      const labelsText = document.getElementById("labelsText");
+      const resultPlots = document.getElementById("resultPlots");
 
-      // Build one label-input per file
+      let plotted = false;
+      let computed = false;
+
+      // Build file → label inputs
       plotFiles.addEventListener("change", () => {
         labelDiv.innerHTML = "";
         Array.from(plotFiles.files).forEach((file) => {
           const row = document.createElement("div");
-          row.style.marginTop = "8px";
           row.innerHTML = `
-            <strong style="display:inline-block;width:200px;overflow:hidden;text-overflow:ellipsis;">
-              ${file.name}
-            </strong>
-            <input
-              type="text"
-              name="labels"
-              placeholder="Enter label"
-              required
-              style="width:200px;padding:6px;margin-left:10px;"
-            />
-          `;
+          <strong>${file.name}</strong>
+          <input type="text" name="labels" class="plot-input"
+            placeholder="Enter label" required
+          />
+        `;
           labelDiv.appendChild(row);
         });
       });
 
+      // One handler: PLOT → SHOW SPECTRA
       plotBtn.addEventListener("click", async () => {
         if (!plotted) {
           if (!plotFiles.files.length) {
-            return alert("Please select at least one .txt file.");
+            return alert("Select at least one .txt file.");
           }
-
-          // collect form data
-          const xmin = document.getElementById("xminInput").value;
-          const xmax = document.getElementById("xmaxInput").value;
+          // gather form
+          const xmin = +document.getElementById("xminInput").value;
+          const xmax = +document.getElementById("xmaxInput").value;
           const form = new FormData();
           Array.from(plotFiles.files).forEach((f) => form.append("files", f));
-
-          // grab the user-entered labels in order
           const labelsArray = Array.from(
             document.getElementsByName("labels")
-          ).map((inp) => inp.value);
+          ).map((i) => i.value);
           labelsArray.forEach((l) => form.append("labels", l));
-
           form.append("xmin", xmin);
           form.append("xmax", xmax);
 
@@ -194,113 +244,87 @@
             const j = await res.json();
             if (!res.ok) throw new Error(j.message || res.status);
 
-            // show the plot
+            // show image + texts
             plotImg.src = "data:image/png;base64," + j.plot;
             plotImg.style.display = "block";
+            intensitiesText.textContent =
+              "Peak Intensities: " + j.intensities.join(", ");
+            labelsText.textContent = "Labels: " + labelsArray.join(", ");
+            intensitiesText.style.display = labelsText.style.display = "block";
 
-            // show Peak Intensities
-            document.getElementById("intensitiesText")?.remove();
-            const p1 = document.createElement("p");
-            p1.id = "intensitiesText";
-            p1.style =
-              "margin-top:12px; color:#16f381; font-weight:bold; text-align:center;";
-            p1.textContent = "Peak Intensities: " + j.intensities.join(", ");
-            document.querySelector(".plot-container").appendChild(p1);
+            // hide the input controls
+            plotFiles.style.display =
+              labelDiv.style.display =
+              inputsDiv.style.display =
+                "none";
 
-            // show corresponding Labels
-            document.getElementById("labelsText")?.remove();
-            const p2 = document.createElement("p");
-            p2.id = "labelsText";
-            p2.style =
-              "margin-top:6px; color:#16f381; font-weight:bold; text-align:center;";
-            p2.textContent = "Labels: " + labelsArray.join(", ");
-            document.querySelector(".plot-container").appendChild(p2);
+            // show compute section
+            computeSection.style.display = "block";
 
-            // hide all inputs now that we've plotted
-            plotFiles.style.display = "none";
-            labelDiv.style.display = "none";
-            inputsDiv.style.display = "none";
+            // prep I rows
+            function addIRow() {
+              const r = document.createElement("div");
+              r.className = "iRow";
+              r.innerHTML = `
+              <input type="number" class="iValue plot-input" step="any" placeholder="I value" />
+              <input type="text"   class="xLabel plot-input" placeholder="Label" />
+            `;
+              iInputs.appendChild(r);
+            }
+            addIRow();
+            addI.onclick = addIRow;
 
-            // flip to reset mode
+            // flip state
             plotted = true;
             plotBtn.textContent = "RESET";
           } catch (e) {
             alert("Plot error: " + e.message);
           }
         } else {
-          // Second click = reload
+          // full page reset
           location.reload();
         }
       });
-      document.getElementById("computeSection").style.display = "block";
-      const iInputs = document.getElementById("iInputs");
-      const addI = document.getElementById("addI");
 
-      function addIRow() {
-        const row = document.createElement("div");
-        row.className = "iRow";
-        row.style.marginTop = "4px";
-        row.innerHTML = `
-      <input
-        type="number"
-        class="iValue"
-        step="any"
-        placeholder="I value"
-        style="width:100px; padding:4px;"
-      />
-      <input
-        type="text"
-        class="xLabel"
-        placeholder="Label"
-        style="width:100px; padding:4px; margin-left:6px;"
-      />
-    `;
-        iInputs.appendChild(row);
-      }
-      // first row
-      addIRow();
-      addI.addEventListener("click", addIRow);
+      // COMPUTE → Transmission & Absorbance
+      computeBtn.addEventListener("click", async () => {
+        if (computed) {
+          return location.reload();
+        }
+        // gather I, labels, I0
+        const iVals = Array.from(document.getElementsByClassName("iValue")).map(
+          (i) => parseFloat(i.value)
+        );
+        const xLabs = Array.from(document.getElementsByClassName("xLabel")).map(
+          (i) => i.value
+        );
+        const i0 = parseFloat(document.getElementById("i0Input").value);
+        if (iVals.some(isNaN) || xLabs.some((l) => !l) || isNaN(i0)) {
+          return alert("Fill all I, labels, and I₀.");
+        }
 
-      // GO button handler
-      document
-        .getElementById("computeBtn")
-        .addEventListener("click", async () => {
-          const iVals = Array.from(
-            document.getElementsByClassName("iValue")
-          ).map((i) => parseFloat(i.value));
-          const xLabs = Array.from(
-            document.getElementsByClassName("xLabel")
-          ).map((i) => i.value);
-          const i0 = parseFloat(document.getElementById("i0Input").value);
-          if (iVals.some(isNaN) || !xLabs.every((l) => l) || isNaN(i0)) {
-            return alert("Fill all I values, their labels, and I₀.");
-          }
+        try {
+          const res = await fetch(piURL + "/compute", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ i_values: iVals, x_labels: xLabs, i0 }),
+          });
+          const j = await res.json();
+          if (!res.ok) throw new Error(j.message || res.status);
 
-          try {
-            const res = await fetch(piURL + "/compute", {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify({
-                i_values: iVals,
-                x_labels: xLabs,
-                i0: i0,
-              }),
-            });
-            const j = await res.json();
-            if (!res.ok) throw new Error(j.message || res.status);
+          // render result plots
+          resultPlots.innerHTML = `
+          <img src="data:image/png;base64,${j.transmission}" />
+          <img src="data:image/png;base64,${j.absorbance}" />
+        `;
 
-            // render the two new plots
-            const rp = document.getElementById("resultPlots");
-            rp.innerHTML = `
-        <img src="data:image/png;base64,${j.transmission}"
-             style="max-width:100%; margin-top:12px; border:1px solid #444;" />
-        <img src="data:image/png;base64,${j.absorbance}"
-             style="max-width:100%; margin-top:12px; border:1px solid #444;" />
-      `;
-          } catch (e) {
-            alert("Compute error: " + e.message);
-          }
-        });
+          // toggle to reset
+          computeBtn.textContent = "RESET";
+          computed = true;
+        } catch (e) {
+          alert("Compute error: " + e.message);
+        }
+      });
     </script>
   </body>
 </html>
