--- a/plot.html
+++ b/plot.html
@@ -150,7 +150,7 @@
         id="labelsText"
         style="
           display: none;
-          color: white;
+          color: #16f381;
           font-weight: bold;
           text-align: center;
         "
