--- a/index.html
+++ b/index.html
@@ -365,11 +365,11 @@
       }
 
       #redirectPlotBtn {
-        background: #16f381;
+        background: #f3ef16;
         color: #0d0d0d;
       }
       #redirectPlotBtn:hover {
-        box-shadow: 0 0 10px #16f381, 0 0 20px #16f38133;
+        box-shadow: 0 0 10px #f3ef16, 0 0 20px #16f38133;
         transform: translateY(-1px);
       }
     </style>
